<resources>
    <string name="app_name">GFS Services</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_worker_dash_board">WorkerDashBoard</string>



    <string name = "name">Name</string>
    <string name = "email">Email</string>
    <string name = "login">Login</string>
    <string name = "create_new_account">New? Create An Account</string>
    <string name = "str_customer">Customer</string>
    <string name = "str_worker">Worker</string>
    <string name = "password">Password</string>
    <string name = "contact">Contact</string>
    <string name = "city">City</string>
    <string name = "sign_up">Sign Up</string>
    <string name = "have_an_account">Already Have An Account</string>
    <string name = "service">Service</string>
    <string name = "service_charge">Service Charge</string>
    <string name = "dialogue_logout">Are you sure you want \n Logout?</string>
    <string name = "yes">Yes</string>
    <string name = "no">No</string>
    <string name = "change_profile">Change Profile</string>
    <string name = "total_ratings">0 ratings</string>
    <string name = "average_rating">0.0</string>
    <string name = "time">Time</string>
    <string name = "price">Price</string>
    <string name = "rating">Ratings</string>
    <string name = "todo">TODO</string>
    <string name = "your_ratings">Your Ratings</string>
    <string name = "message">Message</string>

    <string name = "service_contact">Contact: </string>
    <string name = "service_city">City: </string>
    <string name = "service_price">Price: </string>
    <string name = "profile_name">Name: </string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="enter_the_city">Enter the city</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="problem">Problem</string>
    <string name="send">Send</string>
    <string name="profile_email">Email: </string>
    <string name="profile_service">Service: </string>
    <string name="profile_service_charge">Service Charge: </string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="help_and_feedback">Help And Feedback</string>
    <string name="history">History</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="worker_home">No Request For Work</string>
    <string name="history_text">No Records</string>
    <string name="gfs_services">GFS Services</string>
    <string name="get_fixed_soon_services">(Get Fixed Soon Services)</string>


    <string name="about_details1">1) It is an online platform that provides trained workers at your home.</string>
    <string name="about_details2">
    2)  It works for the benefit of the user and provides good quality  service by our trained professionals.</string>


</resources>