<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/work_nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/work_nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile" />
        <item
            android:id="@+id/work_nav_about_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about_us" />

        <item
            android:id="@+id/work_nav_help_and_feedback"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/help_and_feedback"/>
    </group>
</menu>